# axplat-aarch64-dyn

./: Cargo.toml  README.md  build.rs  link.ld
src/: boot.rs  console.rs  driver.rs  fdt.rs  init.rs  irq.rs  lib.rs  mem.rs  paging.rs  percpu.rs  power.rs  smp.rs  time.rs
src/irq/: mod.rs  v2.rs  v3.rs
