[package]
edition = "2024"
name = "axplat-aarch64-dyn"
version = "0.1.0"

[features]
fp-simd = ["axcpu/fp-simd"]
hv = ["pie-boot/hv", "page_table_entry/arm-el2", "percpu/arm-el2", "axcpu/arm-el2"]
irq = ["axplat/irq"]
smp = ["axplat/smp"]

[dependencies]
aarch64-cpu = "10"
aarch64-cpu-ext = "0.1"
any-uart = "0.2.11"
axconfig-macros = "0.2"
axcpu = "0.2"
axplat = {git = "https://github.com/arceos-hypervisor/axplat_crates"}
fdt-parser = "0.4"
heapless = "0.8"
lazyinit = "0.2"
log = "0.4"
memory_addr = "0.4"
percpu = {version ="0.2"}
pie-boot = {version = "0.2"}
page_table_entry = {version = "0.5"}
rdrive = "0.15"
smccc = "0.2"
spin = "0.10"

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"
