[package]
edition = "2024"
name = "axplat-dyn"
version = "0.4.0"
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/arceos-hypervisor/axplat-aarch64-dyn"
description = "A platform support for arceos."
license = "Apache-2.0"
keywords = ["axvisor", "arceos", "axplat"]

[features]
fp-simd = ["axcpu/fp-simd"]
hv = ["somehal/hv", "page_table_entry/arm-el2", "percpu/arm-el2", "axcpu/arm-el2"]
irq = ["axplat/irq"]
smp = ["axplat/smp"]

[dependencies]
aarch64-cpu = "10"
aarch64-cpu-ext = "0.1"
any-uart = "0.2.11"
arm-gic-driver = {version = "0.15.3", features = ["rdif"]}
axconfig-macros = "0.2"
axcpu = { version = "0.3.0-preview.2" }
axplat = ">=0.3.0-preview.2, <0.3.0"
fdt-parser = "0.4"
heapless = "0.9"
lazyinit = "0.2"
log = "0.4"
memory_addr = "0.4"
page_table_entry = {version = "0.5"}
paste = "1.0"
percpu = {version = "0.2"}
rdrive = "0.18"
rdif-intc = "0.12"
somehal = {version = "0.4"}
spin = "0.10"

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.9"

